# python_search_engine

./: README.md  analysis.py  analyze.py  docs.json  index.py  loadpages.py  main.py  page.py  pyproject.toml  query.py  requirements.txt
app/: __init__.py
app/templates/: base.html  new.html
